# hackernews-TUI

./: --  .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  NOTES.org  README.html  README.md  config.md  run_benchmark  run_debug  theme.toml
.github/workflows/: audit-on-push.yml  cd.yml  ci.yml  deploy.yml  general.yml
ci/: Dockerfile-cross
config_parser/: Cargo.toml
config_parser/src/: lib.rs
config_parser/tests/: test.rs
config_parser_derive/: Cargo.toml
config_parser_derive/src/: lib.rs  parser.rs
doc/: config.md
docs/: config.md
examples/: hn-tui-dark.toml  hn-tui.toml
hackernews_tui/: Cargo.toml
hackernews_tui/src/: config.rs  hn-tui-default.toml  hn_client.rs  keybindings.rs  main.rs  model.rs  parser.rs  prelude.rs  utils.rs
hackernews_tui/src/client/: lazy.rs  mod.rs  model.rs  parser.rs  query.rs  rcdom.rs
hackernews_tui/src/config/: keybindings.rs  mod.rs  theme.rs
hackernews_tui/src/parser/: article.rs  html.rs  mod.rs  rcdom.rs
hackernews_tui/src/view/: article_view.rs  async_view.rs  comment_view.rs  error_view.rs  fn_view_wrapper.rs  help_view.rs  link_dialog.rs  list_view.rs  mod.rs  result_view.rs  search_view.rs  story_view.rs  text_view.rs  traits.rs  utils.rs
src/: config.rs  hn-tui-default.toml  hn_client.rs  keybindings.rs  main.rs  prelude.rs  utils.rs  view.rs
src/view/: article_view.rs  async_view.rs  comment_text_view.rs  comment_view.rs  error_view.rs  event_view.rs  fn_view_wrapper.rs  help_view.rs  list_view.rs  mod.rs  search_view.rs  story_view.rs  text_view.rs  theme.rs  utils.rs
