[package]
name = "hackernews_tui"
version = "0.3.1"
authors = ["Thang Pham <phamducthang1234@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Terminal UI to browse Hacker News"
repository = "https://github.com/aome510/hackernews-TUI"
keywords = ["hackernews", "tui"]
readme = "README.md"

[dependencies]
cursive = { version = "0.16.3", default-features = false, features = ["crossterm-backend", "toml"] }
ureq = { version = "2.1.0", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
anyhow = "1.0.40"
rayon = "1.5.0"
log = "0.4.14"
env_logger = "0.8.3"
htmlescape = "0.3.1"
regex = "1.4.5"
webbrowser = "0.5.5"
substring = "1.4.5"
cursive-async-view = "0.5.0"
cursive_buffered_backend = "0.5.0"
