[package]
name = "hackernews_tui"
version = "0.3.1"
authors = ["Thang Pham <phamducthang1234@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Terminal UI to browse Hacker News"
repository = "https://github.com/aome510/hackernews-TUI"
keywords = ["hackernews", "tui"]
readme = "README.md"

[dependencies]
cursive = { version = "0.16", default-features = false, features = ["crossterm-backend", "toml"] }
ureq = { version = "2.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rayon = "1.5"
log = "0.4"
env_logger = "0.8"
htmlescape = "0.3"
regex = "1.4"
webbrowser = "0.5"
substring = "1.4"
cursive-async-view = "0.5"
cursive_buffered_backend = "0.5"
once_cell = "1.7"
toml = "0.5"
