[package]
name = "config_parser2"
version = "0.1.2"
authors = ["Thang Pham <phamducthang1234@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Another config parsing library"
repository = "https://github.com/aome510/hackernews-TUI"
keywords = ["config", "parser", "toml"]

[dependencies]
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
anyhow = "1.0.40"
config_parser_derive = { version = "0.1.1", path = "../config_parser_derive" }
