[package]
name = "hackernews_tui"
version = "0.13.1"
authors = ["Thang Pham <phamducthang1234@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Terminal UI to browse Hacker News"
repository = "https://github.com/aome510/hackernews-TUI"
keywords = ["hackernews", "tui"]
readme = "../README.md"
include = ["src/**/*", "LICENSE", "../README.*", "!**/examples/**/*"]

[dependencies]

# cursive related deps
cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend"] }
cursive_core = "0.3.7"
cursive-async-view = "0.6.0"
cursive_buffered_backend = "0.6.1"
cursive-aligned-view = "0.6.0"

# html5ever related deps
html5ever = "0.26.0"
markup5ever = "0.11.0"
tendril = "0.4.3"

# tracing/log related deps
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
log = "0.4.17"

# serde related deps
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

# others
ureq = { version = "2.6.2", features = ["json", "cookies"] }
anyhow = "1.0.70"
rayon = "1.7.0"
regex = "1.8.1"
once_cell = "1.17.1"
toml = "0.7.3"
clap = { version = "4.2.4", features = ["string"] }
dirs-next = "2.0.0"
url = "2.3.1"
config_parser2 = { version = "0.1.4", path = "../config_parser" }
crossbeam-channel = "0.5.8"
unicode-width = "0.1.10"
comfy-table = "6.1.4"
html-escape = "0.2.13"
